# coinbase-logger

./: .env  Cargo.toml
migrations/2022-03-12-132937_create_ticker/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
